# employee-lifecycle

./: .env.example  .gitignore  AGENTS.md  README.md  start.bat  stop.bat
backend/: alembic.ini  pyproject.toml  test_endpoints.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  add_business_indexes.py  e51167fb8da7_initial_schema.py  manual_002_add_roster_tables.py  manual_003_add_benefit_profile_fields.py  manual_004_roster_import_fix.py  manual_005_roster_status_split.py
backend/app/: __init__.py  config.py  database.py  deps.py  enums.py  exceptions.py  logging_config.py  main.py  seed.py
backend/app/models/: __init__.py  ai_summary.py  assessment.py  attribute_history.py  base.py  change.py  communication.py  (+26 more)
backend/data/: employee_lifecycle.db-shm  employee_lifecycle.db-wal
backend/tests/: conftest.py  test_ai_risk_service.py  test_benefit_parser.py  test_communication_service.py  test_date_utils.py  test_employee_list_enhancement.py  test_employee_service.py  test_employment_date_change.py  test_employment_service.py  test_followup_service.py  test_operation_log_service.py  test_probation_service.py  test_roster_commit_service.py  test_roster_confirmation_service.py  test_roster_cooperation.py  test_roster_import_routes.py  test_roster_issue_recommendation.py  test_roster_issue_resolution.py  test_roster_lifecycle_evaluator.py  test_roster_mapping_service.py  test_roster_parser.py  test_roster_preview_service.py  test_roster_repair_service.py  test_roster_rollback_service.py  test_salary_parser.py  test_separation_service.py
(+179 files in other folders)
